noteapp-logo added

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="icon" href="./notes-logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Todo App With React JS</title>
   </head>
