--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="icon" href="./notes-logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Todo App With React JS</title>
+    <title>Note App With React JS</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
